# codecrafters-shell-c

./: CMakeLists.txt  README.md  vcpkg.json  your_program.sh
src/: main.c
